--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "reactstrap": "^8.5.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -31,6 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+   "socket.io": "0.9.x"
   },
   "engines": {
     "node": ">=10.0.0",
