--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "reactstrap": "^8.5.1"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,11 +32,8 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-   "socket.io": "0.9.x"
-  },
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
+    "node": "12.18.3",
+    "npm": "6.14.6"
   }
 }
